--- a/carousel.html
+++ b/carousel.html
@@ -193,7 +193,6 @@
                                 <a
                                   class="title hide-ball"
                                   href="https://www.reno-seminare.de/"
-                                  data-type="page-transition"
                                   target="_blank"
                                   data-html="true"
                                   data-toggle="popover"
@@ -203,6 +202,8 @@
                                   title="hallo1"
                                   >GRAF GABELSTAPLER<span>01</span></a
                                 >
+                              <a href="https://www.reno-seminare.de/"
+                              target="_blank"></a>
                               </div>
                               <div class="subtitle-wrapper">
                                 <div class="subtitle">Webseite</div>
@@ -655,7 +656,7 @@
     <script src="assets/js/debug.addIndicators.min.js"></script>
     <script src="assets/js/animation.gsap.min.js"></script>
     <script src="dist/plugins-min.js"></script>
-    <script src="dist/scripts-min.js"></script>
+    <script src="dist/scripts.js"></script>
     <script type="text/javascript" src="assets/js/popper.js"></script>
     <script
       type="text/javascript"
